syntax = "proto3";
option java_multiple_files = true;
package com.item.itemservice.server;

message ItemRequest {
  int32 itemId = 1;
}

message ItemResponse {
  int32 id = 1;
  string name = 2;
}

service ItemService {
  rpc findItemById(ItemRequest) returns (ItemResponse);
}